--- a/Sources/FormInput/FormInputViews/FormPickerView/FormPickerView.xib
+++ b/Sources/FormInput/FormInputViews/FormPickerView/FormPickerView.xib
@@ -23,19 +23,19 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="30"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMy-LE-zf6">
-                                    <rect key="frame" x="20" y="6" width="332.33333333333331" height="18"/>
+                                    <rect key="frame" x="20" y="12" width="332.33333333333331" height="18"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x56-Lw-tIz">
-                                    <rect key="frame" x="360.33333333333331" y="7" width="12.666666666666686" height="16.666666666666664"/>
+                                    <rect key="frame" x="360.33333333333331" y="13.999999999999998" width="12.666666666666686" height="14.33333333333333"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="12.67" id="OcU-FN-Z1h"/>
                                     </constraints>
                                 </imageView>
                             </subviews>
-                            <edgeInsets key="layoutMargins" top="0.0" left="20" bottom="0.0" right="20"/>
+                            <edgeInsets key="layoutMargins" top="12" left="20" bottom="0.0" right="20"/>
                         </stackView>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="1Et-F5-bsu" customClass="TagCollectionView" customModule="FormInput">
                             <rect key="frame" x="0.0" y="42" width="393" height="50"/>
