--- a/Sources/FormInput/FormInputViews/FormPickerView/FormPickerView.xib
+++ b/Sources/FormInput/FormInputViews/FormPickerView/FormPickerView.xib
@@ -16,11 +16,11 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="92"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" tag="4" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="B3q-fK-CSB">
+                <stackView opaque="NO" tag="4" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="B3q-fK-CSB">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="92"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="YAY-el-99e">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="30"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="42"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMy-LE-zf6">
                                     <rect key="frame" x="20" y="12" width="332.33333333333331" height="18"/>
@@ -31,11 +31,15 @@
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x56-Lw-tIz">
                                     <rect key="frame" x="360.33333333333331" y="13.999999999999998" width="12.666666666666686" height="14.33333333333333"/>
                                     <constraints>
+                                        <constraint firstAttribute="height" constant="18" id="LNA-bM-902"/>
                                         <constraint firstAttribute="width" constant="12.67" id="OcU-FN-Z1h"/>
                                     </constraints>
                                 </imageView>
                             </subviews>
-                            <edgeInsets key="layoutMargins" top="12" left="20" bottom="0.0" right="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="42" id="Qsv-dq-oJY"/>
+                            </constraints>
+                            <edgeInsets key="layoutMargins" top="12" left="20" bottom="12" right="20"/>
                         </stackView>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="1Et-F5-bsu" customClass="TagCollectionView" customModule="FormInput">
                             <rect key="frame" x="0.0" y="42" width="393" height="50"/>
